--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body{
 
         }
         .box{
-            font-size: 30px;
+            font-size: 60px;
             color: #f7df1e;
             height: 100vh;
             width: 100vw;
@@ -50,7 +50,7 @@ body{
     <head>
         <body>
             <div class="box">
-                <p>C*zinho hoje?</p>
+                <p>HOJE TEM AMOR 😋??</p>
                 <div class="buttons-container">
                     <button><a 
                         href="https://www.youtube.com/watch?v=a8c5wmeOL9o&ab_channel=Dylancliff111"><a href="resultado.html">Sim</a></a></button>
